<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_image_loading_library_by_bumptech">Glide- Image Loading Library by Bumptech</string>
    <string name="loadapp_current_repository_by_udacity">LoadApp- Current repository by Udacity</string>
    <string name="retrofit_type_safe_client_for_android_and_java_by_square_inc">Retrofit- Type safe client for Android and Java by Square, Inc</string>
    <string name="repository">Repository:</string>
    <string name="status">Status:</string>
    <string name="doneBtn">SHOW</string>
</resources>
