<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:id="@+id/downloadRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/custom_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >
        <RadioButton
            android:id="@+id/glideRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glide_image_loading_library_by_bumptech"
            />
        <RadioButton
            android:id="@+id/LoadAppRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loadapp_current_repository_by_udacity"
            />
        <RadioButton
            android:id="@+id/retroRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retrofit_type_safe_client_for_android_and_java_by_square_inc"
            />
    </RadioGroup>
    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
